# story-readiness

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  jira_readiness_agent_requirements.md  pyproject.toml
app/: config.py  main.py  models.py
app/graph/: graph.py  nodes.py  state.py
app/llm/: gateway.py  schemas.py
app/observability/: langfuse.py
app/prompts/: loader.py  prompts.yaml
app/services/: jira.py
notebook/: visualize_graph.ipynb
